--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 header{
@@ -15,7 +15,7 @@ header{
 
 #title{
     font-size: 35px;
-    font-weight: 900;
+    font-weight: 800;
     vertical-align: middle;
 }
 
