--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ header{
     color: white;
     font-weight: 500;
     border: none;
+    
+    &:hover {
+        background-color: darkblue;
+        cursor: pointer;
+    }
 }
 
 #add-section{
@@ -56,6 +61,12 @@ header{
     font-weight: 500;
     border-color: #CCD2D6;
     border: 1px solid;
+
+    &:hover {
+        background-color: darkblue;
+        cursor: pointer;
+        color: white;
+    }
 }
 
 .titles{
@@ -151,8 +162,14 @@ header{
 
 .check{
     color: #A3D116;
+}
+
+.circle{
     width: 20px;
     height: 20px;
+    border: 1px solid;
+    border-radius: 50%;
+    text-align: center;
 
 }
 
